--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,5 @@ db.sqlite3
 # Ignore data folders
 data/
 
-result/stage_4_result/embedding.pkl
-result/stage_4_result/generation_model.pth
-result/stage_4_result/vocab.pkl
+result/stage_4_result/*
+!result/stage_4_result/classification_result
